# dgraph.cpp

./: .gitignore  CMakeLists.txt  README.md
include/: client.h  clientstub.h  dgraph.h  dgraphclient.h  transaction.h  util.h
protos/: dgraphclient.grpc.pb.cc  dgraphclient.grpc.pb.h  dgraphclient.pb.cc  dgraphclient.pb.h  dgraphclient.proto
src/: dgraphclient.cpp
